--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
     "merge-stream": "2.0.0",
+    "node-sass": "^4.14.1",
     "stylelint": "^10.1.0",
     "yargs": "14.0.0"
   },
@@ -35,8 +36,8 @@
   "devDependencies": {
     "browser-sync": "2.26.7",
     "concurrently": "4.1.2",
-    "eslint-plugin-no-jquery": "^2.5.0",
     "eslint-plugin-json": "^2.1.1",
+    "eslint-plugin-no-jquery": "^2.5.0",
     "jasmine-core": "3.4.0",
     "karma": "4.3.0",
     "karma-chrome-launcher": "3.1.0",
